# plaid-onsite-api

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/endpoints/: hello.py
app/core/: config.py  logger.py
app/script/: onsite.py
tests/: conftest.py
tests/endpoints/: hello_test.py
tests/script/: onsite_test.py
