[tool.poetry]
name = "plaid-onsite-api"
version = "0.1.0"
description = "Backend server starter (FastAPI)"
authors = ["Raunaq Vohra <ronvohra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
tox = "^3.24.4"
pytest-cov = "^3.0.0"
black = "^stable"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
